--- a/wiki/T10.wiki
+++ b/wiki/T10.wiki
@@ -18,3 +18,5 @@ this is a first "boot camp" also for my code, complete the mission is okay.
 
 more perfect todo: command center should be moved nearer to minerals when game start.
 and other changes to reduce completion time.
+
+[http://neoe-bw-ai-missions.googlecode.com/files/0039%20neoeT%20CompZ.rep replay]
