Edited wiki page through web user interface.

--- a/wiki/T11.wiki
+++ b/wiki/T11.wiki
@@ -1,8 +1,6 @@
-#Episode I Tutorial: Boot Camp
+#Episode I Terran: 1 Wasteland
 
 == Introduction ==
-
-Episode I Terran: 1 Wasteland
 
 Objectives
 
