--- a/wiki/FinishedMissions.wiki
+++ b/wiki/FinishedMissions.wiki
@@ -1,4 +1,4 @@
-#Finished missions
+#summary Finished missions
 
 
 
@@ -159,5 +159,3 @@ Zerg Campaign: Episode VI
   10. Secret mission: Dark Origin
 
   11. Zerg Mission 10: Omega 
-
-
