Edited wiki page through web user interface.

--- a/wiki/FinishedMissions.wiki
+++ b/wiki/FinishedMissions.wiki
@@ -16,7 +16,7 @@ Terran Campaign: Episode I
 
    1. Terran mission 1: Wasteland *Completed* [T11]
 
-   2. Terran mission 2: Backwater Station
+   2. Terran mission 2: Backwater Station *under siege* [T12]
 
    3. Terran mission 3: Desperate Alliance
 
