Edited wiki page through web user interface.

--- a/wiki/FinishedMissions.wiki
+++ b/wiki/FinishedMissions.wiki
@@ -1,161 +1,66 @@
 #summary Finished missions
-
-
-
-
-
-
-
-Terran Campaign: Episode I
-
-
-
-    * Tutorial: Boot Camp   *Completed* [T10]
-
-
-
-   1. Terran mission 1: Wasteland *Completed* [T11]
-
-   2. Terran mission 2: Backwater Station *under siege* [T12]
-
-   3. Terran mission 3: Desperate Alliance
-
-   4. Terran mission 4: The Jacobs Installation
-
-   5. Terran mission 5: Revolution
-
-   6. Terran mission 6: Norad II
-
-   7. Terran mission 7: The Trump Card
-
-   8. Terran mission 8: The Big Push
-
-   9. Terran mission 9: New Gettysberg
-
-  10. Terran mission 10: The Hammer Falls 
-
-
-
-Zerg Campaign: Episode II
-
-
-
-   1. Zerg mission 1: Among the Ruins
-
-   2. Zerg mission 2: Egression
-
-   3. Zerg mission 3: The New Dominion
-
-   4. Zerg mission 4: Agent of the Swarm
-
-   5. Zerg mission 5: The Amerigo
-
-   6. Zerg mission 6: The Dark Templar
-
-   7. Zerg mission 7: The Culling
-
-   8. Zerg mission 8: Eye for an Eye
-
-   9. Zerg mission 9: The Invasion of Aiur
-
-  10. Zerg mission 10: Full Circle 
-
-
-
-Protoss Campaign: Episode III
-
-
-
-   1. Protoss mission 1: First Strike
-
-   2. Protoss mission 2: Into the Flames
-
-   3. Protoss mission 3: Higher Ground
-
-   4. Protoss mission 4: The Hunt for Tassadar
-
-   5. Protoss mission 5: Choosing Sides
-
-   6. Protoss mission 6: Into the Darkness
-
-   7. Protoss mission 7: Homeland
-
-   8. Protoss mission 8: The Trial of Tassadar
-
-   9. Protoss mission 9: Shadow Hunters
-
-  10. Protoss mission 10: Eye of the Storm 
-
-
-
-Protoss Campaign: Episode IV
-
-
-
-   1. Protoss Mission 1: Escape from Aiur
-
-   2. Protoss Mission 2: Dunes of Shakuras
-
-   3. Protoss Mission 3: Legacy of the Xel'Naga
-
-   4. Protoss Mission 4: The Quest for Uraj
-
-   5. Protoss Mission 5: The Battle of Braxis
-
-   6. Protoss Mission 6: Return to Char
-
-   7. Protoss Mission 7: The Insurgent
-
-   8. Protoss Mission 8: Countdown 
-
-
-
-Terran Campaign: Episode V
-
-
-
-   1. Terran Mission 1: First Strike
-
-   2. Terran Mission 2: The Dylarian Shipyards
-
-   3. Terran Mission 3: Ruins of Tarsonis
-
-   4. Terran Mission 4: Assault on Korhal
-
-   5. Terran Mission 5A: Emperor's Fall (Ground Zero)
-
-   6. Terran Mission 5B: Emperor's Fall (Birds of War)
-
-   7. Terran Mission 6: Emperor's Flight
-
-   8. Terran Mission 7: Patriot's Blood
-
-   9. Terran Mission 8: To Chain the Beast 
-
-
-
-Zerg Campaign: Episode VI
-
-
-
-   1. Zerg Mission 1: Vile Disruption
-
-   2. Zerg Mission 2: Reign of Fire
-
-   3. Zerg Mission 3: The Kel-Morian Combine
-
-   4. Zerg Mission 4: The Liberation of Korhal
-
-   5. Zerg Mission 5: True Colors
-
-   6. Zerg Mission 6: Fury of the Swarm
-
-   7. Zerg Mission 7: Drawing of the Web
-
-   8. Zerg Mission 8: To Slay the Beast
-
-   9. Zerg Mission 9: The Reckoning
-
-  10. Secret mission: Dark Origin
-
-  11. Zerg Mission 10: Omega 
+||  || || Terran Campaign:   Episode I || || ||
+||  ||  * Tutorial: ||  Boot Camp   || *Completed*    || [T10] ||
+||  1. ||  Terran mission 1: ||  Wasteland   ||*Completed* || [T11]  ||
+||  2. ||  Terran mission 2: ||  Backwater Station  || *under siege* || [T12]    ||
+||  3. ||  Terran mission 3: ||  Desperate Alliance                      || || ||
+||  4. ||  Terran mission 4: ||  The Jacobs Installation                 || || ||
+||  5. ||  Terran mission 5: ||  Revolution                              || || ||
+||  6. ||  Terran mission 6: ||  Norad II                                || || ||
+||  7. ||  Terran mission 7: ||  The Trump Card                          || || ||
+||  8. ||  Terran mission 8: ||  The Big Push                            || || ||
+||  9. ||  Terran mission 9: ||  New Gettysberg                          || || ||
+|| 10. ||  Terran mission 10: ||  The Hammer Falls                       || || ||
+|| || || Zerg Campaign:   Episode II        || || ||
+||   1. ||  Zerg mission 1: ||  Among the Ruins                            || || ||
+||   2. ||  Zerg mission 2: ||  Egression                                  || || ||
+||   3. ||  Zerg mission 3: ||  The New Dominion                           || || ||
+||   4. ||  Zerg mission 4: ||  Agent of the Swarm                         || || ||
+||   5. ||  Zerg mission 5: ||  The Amerigo                                || || ||
+||   6. ||  Zerg mission 6: ||  The Dark Templar                           || || ||
+||   7. ||  Zerg mission 7: ||  The Culling                                || || ||
+||   8. ||  Zerg mission 8: ||  Eye for an Eye                             || || ||
+||   9. ||  Zerg mission 9: ||  The Invasion of Aiur                       || || ||
+||  10. ||  Zerg mission 10: ||  Full Circle                               || || ||
+|| || || Protoss Campaign:  Episode III           || || ||
+||   1. ||  Protoss mission 1: ||  First Strike                            || || ||
+||   2. ||  Protoss mission 2: ||  Into the Flames                         || || ||
+||   3. ||  Protoss mission 3: ||  Higher Ground                           || || ||
+||   4. ||  Protoss mission 4: ||  The Hunt for Tassadar                   || || ||
+||   5. ||  Protoss mission 5: ||  Choosing Sides                          || || ||
+||   6. ||  Protoss mission 6: ||  Into the Darkness                       || || ||
+||   7. ||  Protoss mission 7: ||  Homeland                                || || ||
+||   8. ||  Protoss mission 8: ||  The Trial of Tassadar                   || || ||
+||   9. ||  Protoss mission 9: ||  Shadow Hunters                          || || ||
+||  10. ||  Protoss mission 10: ||  Eye of the Storm                       || || ||
+|| || || Protoss Campaign:   Episode IV       || || ||
+||   1. ||  Protoss Mission 1: ||  Escape from Aiur                        || || ||
+||   2. ||  Protoss Mission 2: ||  Dunes of Shakuras                       || || ||
+||   3. ||  Protoss Mission 3: ||  Legacy of the Xel'Naga                  || || ||
+||   4. ||  Protoss Mission 4: ||  The Quest for Uraj                      || || ||
+||   5. ||  Protoss Mission 5: ||  The Battle of Braxis                    || || ||
+||   6. ||  Protoss Mission 6: ||  Return to Char                          || || ||
+||   7. ||  Protoss Mission 7: ||  The Insurgent                           || || ||
+||   8. ||  Protoss Mission 8: ||  Countdown                               || || ||
+|| || || Terran Campaign: Episode V        || || ||
+||   1. ||  Terran Mission 1: ||  First Strike                             || || ||
+||   2. ||  Terran Mission 2: ||  The Dylarian Shipyards                   || || ||
+||   3. ||  Terran Mission 3: ||  Ruins of Tarsonis                        || || ||
+||   4. ||  Terran Mission 4: ||  Assault on Korhal                        || || ||
+||   5. ||  Terran Mission 5A: ||  Emperor's Fall (Ground Zero)            || || ||
+||   6. ||  Terran Mission 5B: ||  Emperor's Fall (Birds of War)           || || ||
+||   7. ||  Terran Mission 6: ||  Emperor's Flight                         || || ||
+||   8. ||  Terran Mission 7: ||  Patriot's Blood                          || || ||
+||   9. ||  Terran Mission 8: ||  To Chain the Beast                       || || ||
+|| || || Zerg Campaign:  Episode VI       || || ||
+||   1. ||  Zerg Mission 1: ||  Vile Disruption                            || || ||
+||   2. ||  Zerg Mission 2: ||  Reign of Fire                              || || ||
+||   3. ||  Zerg Mission 3: ||  The Kel-Morian Combine                     || || ||
+||   4. ||  Zerg Mission 4: ||  The Liberation of Korhal                   || || ||
+||   5. ||  Zerg Mission 5: ||  True Colors                                || || ||
+||   6. ||  Zerg Mission 6: ||  Fury of the Swarm                          || || ||
+||   7. ||  Zerg Mission 7: ||  Drawing of the Web                         || || ||
+||   8. ||  Zerg Mission 8: ||  To Slay the Beast                          || || ||
+||   9. ||  Zerg Mission 9: ||  The Reckoning                              || || ||
+||  10. ||  Secret mission: ||  Dark Origin                                || || ||
+||  11. ||  Zerg Mission 10: ||  Omega                                     || || ||
