--- a/wiki/FinishedMissions.wiki
+++ b/wiki/FinishedMissions.wiki
@@ -2,7 +2,7 @@
 ||  || || Terran Campaign:   Episode I || || ||
 ||  ||   Tutorial: ||  Boot Camp   || *Completed*    || [T10] ||
 ||  1. ||  Terran mission 1: ||  Wasteland   || *Completed* || [T11]  ||
-||  2. ||  Terran mission 2: ||  Backwater Station  || *under siege* || [T12]    ||
+||  2. ||  Terran mission 2: ||  Backwater Station  || *Completed* || [T12]    ||
 ||  3. ||  Terran mission 3: ||  Desperate Alliance                      || || ||
 ||  4. ||  Terran mission 4: ||  The Jacobs Installation                 || || ||
 ||  5. ||  Terran mission 5: ||  Revolution                              || || ||
